public/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body{
    min-height: 100vh;
}

.main-content 
{
    width: 100%;
    position: relative;
    padding: 0 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}

/*For index.html*/
.mainBackground {
    width: 100%;
    height: 100%;
    background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
    /*--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));--*/
    position: relative;
    padding: 0 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}

/*For leistungen.html */
.mainBackground2 {
    width: 100%;
    height: 100%;
    background-image: linear-gradient(rgba(201, 214, 255, 0.5),rgba(5, 117, 230, 0.3));
    /*--background-image: linear-gradient(rgba(5, 117, 230, 0.4), rgba(0, 247, 96, 0.1));--*/
    position: absolute;
    padding: 0 5%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: -1;
}

/*Navigation bar */
nav{
    width: 100%;
    height: 11em;
    position: absolute;
    top: 0;
    left: 0;
    padding: 20px 8%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.35);
    backdrop-filter: blur(10px);
}
/*Logo */
nav .logo{
    width: 280px;
}
/*Navigation buttons */
nav ul li{
    list-style: none;
    display: inline-block;
    margin-left: 40px;
}
/*Navigation buttons text */
nav ul li a{
    text-decoration: none;
    color: #fff;
    font-size: 22px;
    border: 2px solid #fff;
    padding: 4px 10px;
    border-radius: 50px;
    transition: 0.5s;
}
/*Navigation buttons "on Hover" effect */
nav ul li a:hover{
    -webkit-text-stroke: 1px #5FB0FF;
}

/*Element: big text in the middle for index.html */
.content{
    text-align: center;
}
/*Its Text design */
.content h1{
    text-decoration: none;
    font-size: 120px;
    color: #fff;
    font-weight: 600;
    transition: 0.5s;
}
/*"On Hover" effect for the text in the middle */
.content h1:hover{
    -webkit-text-stroke: 2px #fff;
    color: transparent;
}
/*The button underneath the big text from index.html */
.content a{
    text-decoration: none;
    display: inline-block;
    color: #fff;
    font-size: 24px;
    border: 4px solid #5FB0FF;
    padding: 14px 70px ;
    border-radius: 50px;
    margin-top: 20px;
    transition: 0.5s;
}
/*"On Hover" effect for the button */
.content a:hover{
    -webkit-text-stroke: 1px #5FB0FF;
}
/* */
/* */
/*Element: big text in the middle for leistungen.html */
.content-Leistung{
    text-align: center;
}
/*Its text design */
.content-Leistung h1{
    text-decoration: none;
    font-size: 140px;
    color: #fff;
    font-weight: 600;
    transition: 0.5s;
    margin-top: 2em;
    margin-bottom: 1em;
}
/*"On Hover" effect for the text in the middle from leistungen.html */
.content-Leistung h1:hover{
    -webkit-text-stroke: 2px #FFF;
    color: transparent;
}
/* */
/* */
/*The background Video from index.html */
.back-video{
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: -1;
}
/*Commands to keep the minimum aspect-ratio of the background video */
@media (min-aspect-ratio: 16/9){
    .back-video{
        width: 100%;
        height: auto;
    }
}
/*Commands to keep the maximum aspect-ratio of the background video */
@media (max-aspect-ratio: 16/9){
    .back-video{
        width: auto;
        height: 100%;
    }
}
/* */
/* */
/* */
/*The text-box from leistungen.html */
.textbox-leistung{
    margin-left: auto;
    margin-right: auto;
    min-height: 10em;
    display: table-cell;
    vertical-align: middle;
    width: 56em;
}
/*The text within the box */
.textbox-leistung div{
    align-items: center;
    display:inline-block;
    color: #fff;
    font-size: 18px;
    border: 4px solid #5FB0FF;
    padding: 14px 70px ;
    border-radius: 50px;
    text-align: left;
    box-shadow: 0 15px 20px rgb(0 0 0 / 50%);
    background: rgba(80, 84, 87, 0.295);
    width: 900px;
}

.textbox-leistung ul {
    margin-top: 40px;
    margin-bottom: 40px;
}

.textbox-leistung-title {
    margin-top: 40px;
}


/* */
/* */
/*The Contact-Form element */
.kontakt-section{
    margin-left: auto;
    margin-right: auto;
    top: 200px;
    min-height: 10em;
    display: table-cell;
    vertical-align: middle;
    width: 56em;
    position: relative;
}
.kontakt-section h1{
text-align: center;
}

/*Each individual cell (Name, E-mail etc) */
.kontakt-form{
    max-width: 600px;
    margin: auto;
    padding: 0 10px;
    overflow: hidden;
}
/*Styling the text within those cells*/
.kontakt-form-text{
    background: #ffffff8e;
    display: block;
    width: 100%;
    box-sizing: border-box;
    margin: 16px 0;
    border: 0;
    padding: 20px 40px;
    outline: none;
    color: #ddd
    transition: 0.5s;
}
/*When inside one of those cells, the cell glows*/
.kontakt-form-text:focus{
    box-shadow: 0 0 10px 4px rgb(95, 176, 255);
}
/*Styling the message box*/
textarea.kontakt-form-text{
    resize: none;
    height: 120px;
}
/*The "Send" button*/
.kontakt-form-btn{
    float: right;
    border: 0;
    background: #5FB0FF;
    color: #fff;
    padding: 12px 50px;
    border-radius: 20px;
    cursor: pointer;
    transition: 0.5;
}
/*The "Send" button - on cursor hover, change color*/
.kontakt-form-btn:hover{
    background: rgb(35, 136, 238);
}

/* */
/* */
/* */


/* */
/* */
/* */
/*The background image from leistungen.html */
.background-img2{
    background-image: url(bckimg3.jpg);
    height: 100%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    z-index: -2;
}
/*The background image from kontakt.html */
.background-img3{
    background-image: url(bckimg4.jpg);
    height: 100%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    z-index: -2;
}

